<resources>
    <string name="app_name">Dicoding Event App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Upcoming</string>
    <string name="title_notifications">Finished</string>
    <string name="title_settings">Settings</string>
    <string name="Finished">Finished Events</string>
    <string name="Upcoming">Upcoming Events</string>
    <string name="title_upcoming">Dicoding Upcoming Events</string>
    <string name="title_finished">Finished Events</string>
    <string name="title_h2">Recommendation Event For You!</string>
    <string name="title_favorite">Favorite</string>
    <string name="button_register">REGISTER</string>
    <string name="search_events">Search events</string>
    <string name="todo">TODO</string>
    <string name="Header">header_cover\n</string>
    <string name="log_id">No event ID provided</string>
    <string name="event_image">event</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove">Remove</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="no_favorite_events_yet">No favorite events yet</string>
    <string name="favorite_events">Favorite Events</string>

</resources>