<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.submissionfundamental.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_eventDetailFragment"
            app:destination="@id/eventDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dicoding.submissionfundamental.ui.upcoming.UpcomingFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_upcomingFragment_to_eventDetailFragment"
            app:destination="@id/eventDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dicoding.submissionfundamental.ui.finished.FinishedFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_finished" >
        <action
            android:id="@+id/action_finishedFragment_to_eventDetailFragment"
            app:destination="@id/eventDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventDetailFragment"
        android:name="com.dicoding.submissionfundamental.ui.detail.EventDetailFragment"
        android:label="Event Detail"
        tools:layout="@layout/fragment_event_detail">
        <argument
            android:name="eventId"
            app:argType="integer" />
    </fragment>
</navigation>